# supernote-stickers

./: .gitignore  README.md  png2snstk.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: app.js  index.html
src/supernote_stickers/: __init__.py  cli.py  converter.py
src/supernote_stickers/templates/: index.html
src/supernote_stickers/web/: __init__.py  app.py
tests/: test_converter.py  test_web_app.py
